# prediction-market

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  DESIGN.md  PRODUCT.md  PROJECT_PLAN.md  README.md  package-lock.json  package.json  progress.md  tsconfig.json
backend/: Dockerfile  entrypoint.sh  fly.toml  go.mod  go.sum
backend/db/: embed.go  schema.sql
backend/fixtures/: demo-final.json
docs/: DEMO-READINESS.md  DEPLOY.md  HANDOFF.md  MANUAL-TEST-PLAN.md  core-features-spec.md  glossary.md  interface-contract.md  txodds-day1-email.md
docs-site/: README.md  architecture.mdx  docs.json  index.mdx  setup.mdx
docs-site/api/: rest.mdx  websocket.mdx
docs-site/concepts/: matching.mdx  trust-model.mdx
docs-site/onchain/: program.mdx  signed-messages.mdx
docs-site/reference/: adrs.mdx  status.mdx
docs/adr/: 0001-off-chain-matching-on-chain-settlement.md  0002-collateralization-and-matching-model.md  0003-escrow-boundary-signed-orders-operator-crank.md  0004-combo-settlement-onchain-reads-leg-conditions.md  0005-settlement-oracle-layer.md  0006-precision-market-economics.md  0007-scope-team-schedule.md  README.md
docs/demo/: task4.md
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
mobile/: .env.example  app.config.js  app.json  metro.config.js  package-lock.json  package.json  tailwind.config.js
programs/pitchmarket/: Cargo.toml
programs/pitchmarket/src/: errors.rs  lib.rs  sig_verify.rs  state.rs
tests/: helpers.ts  lifecycle.ts  settle_paths.ts
(+159 files in other folders)
